objects/kugo2p__AppliedPayment__c.object
<CustomObject>
    <description>Kugamon - Junction object that spilts a completed Payment record amount and applies to the related Order or Invoice Lines objects.</description>
    <fields>
        <fullName>kugo2p__AmountApplied__c</fullName>
        <label>Amount Applied</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceAdditionalChargeCredit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Additional Charge/Credit</label>
        <referenceTo>kugo2p__KugamonInvoiceAdditionalChargeCredit__c</referenceTo>
        <relationshipLabel>Applied Payments</relationshipLabel>
        <relationshipName>Applied_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>kugo2p__KugamonInvoiceLine__c</referenceTo>
        <relationshipLabel>Applied Payments</relationshipLabel>
        <relationshipName>Applied_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>kugo2p__KugamonInvoice__c</referenceTo>
        <relationshipLabel>Applied Payments</relationshipLabel>
        <relationshipName>Applied_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentProcessor__c</fullName>
        <formula>text( kugo2p__Payment__r.kugo2p__Payment_Processor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Processor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__PaymentType__c</fullName>
        <formula>text( kugo2p__Payment__r.kugo2p__Payment_Type__c )</formula>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Payment__c</fullName>
        <label>Payment Name</label>
        <referenceTo>kugo2p__PaymentX__c</referenceTo>
        <relationshipLabel>Applied Payments</relationshipLabel>
        <relationshipName>Applied_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrderAdditionalChargeCredit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Additional Charge/Credit</label>
        <referenceTo>kugo2p__SalesOrderAdditionalChargeCredit__c</referenceTo>
        <relationshipLabel>Applied Payments</relationshipLabel>
        <relationshipName>Applied_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrderProductLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product Line</label>
        <referenceTo>kugo2p__SalesOrderProductLine__c</referenceTo>
        <relationshipLabel>Applied Payments</relationshipLabel>
        <relationshipName>Applied_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrderServiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Service Line</label>
        <referenceTo>kugo2p__SalesOrderServiceLine__c</referenceTo>
        <relationshipLabel>Applied Payments</relationshipLabel>
        <relationshipName>Applied_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Applied Payments</relationshipLabel>
        <relationshipName>Applied_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Status__c</fullName>
        <formula>Text(kugo2p__Payment__r.kugo2p__Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__TransactionId__c</fullName>
        <formula>kugo2p__Payment__r.kugo2p__Transaction_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__TransactionType__c</fullName>
        <formula>text( kugo2p__Payment__r.kugo2p__Transaction_Type__c )</formula>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <label>Applied Payment</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>